<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MusicReviewApp</string>
    <string name="album_poster">Album poster</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="empty_lists">Empty lists</string>
    <string name="completion">Completion percentage</string>
    <string name="add_entries">Add entries</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_album">View album details</string>
    <string name="add_album">Add album</string>
    <string name="like">Like</string>
    <string name="settings">Settings</string>
    <string name="account">ACCOUNT</string>
    <string name="sign_out">Sign out</string>
    <string name="iamnotbhoo">iamnotbhoo</string>
    <string name="profile">PROFILE</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="gotham">Gotham</string>
    <string name="bio">Bio</string>
    <string name="yuck">YuCk</string>
    <string name="pronoun">Pronoun</string>
    <string name="he_his">He / his</string>
    <string name="url">URL</string>
    <string name="iamnotbhoo_co_za">iamnotbhoo.co.za</string>
    <string name="favorites">FAVORITES</string>
    <string name="favorite_albums">Favorite Albums</string>
    <string name="avatar">AVATAR</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="add_to_lists">Add to Lists</string>
    <string name="create_new_list">Create New List</string>
    <string name="your_lists">Your Lists</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="list_name">List Name</string>
    <string name="_0_albums">0 albums</string>
    <string name="add_albums">Add Albums</string>
    <string name="done">Done</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="artist">ARTIST</string>
    <string name="listen_on_spotify">Listen on Spotify</string>
    <string name="album_description">ALBUM DESCRIPTION</string>
    <string name="label">LABEL</string>
    <string name="genre">GENRE</string>
    <string name="ratings">RATINGS</string>
    <string name="_4_8">4.8</string>
    <string name="search_albums">Search Albums</string>
    <string name="new_list">New List</string>
    <string name="add_description">Add description...</string>
    <string name="add_tags">Add tags...</string>
    <string name="diary">Diary</string>
    <string name="july_2025">JULY 2025</string>
    <string name="choose_up_to_4_favorite_albums_to_display_on_your_profile">Choose up to 4 favorite albums to display on your profile</string>
    <string name="popular">Popular</string>
    <string name="albums">ALBUMS</string>
    <string name="reviews">REVIEWS</string>
    <string name="lists">LISTS</string>
    <string name="popular_this_week">Popular this week</string>
    <string name="new_from_friends">New from friends</string>
    <string name="popular_with_friends">Popular with friends</string>
    <string name="get_started">Get Started</string>
    <string name="popular_on_musicreviewapp">POPULAR ON MUSICREVIEWAPP</string>
    <string name="likes">Likes</string>
    <string name="no_liked_albums_yet">No liked albums yet</string>
    <string name="albums_you_like_will_appear_here">Albums you like will appear here</string>
    <string name="no_liked_reviews_yet">No liked reviews yet</string>
    <string name="reviews_you_like_will_appear_here">Reviews you like will appear here</string>
    <string name="no_liked_lists_yet">No liked lists yet</string>
    <string name="lists_you_like_will_appear_here">Lists you like will appear here</string>
    <string name="list_title">List Title</string>
    <string name="by_creator">by Creator</string>
    <string name="list_description_goes_here">List description goes here...</string>
    <string name="_0_likes">0 likes</string>
    <string name="_0">0%</string>
    <string name="created_date">Created date</string>
    <string name="albums_in_this_list">Albums in this list</string>
    <string name="fav_rap_albums_2025">Fav Rap Albums 2025</string>
    <string name="flame">Flame</string>
    <string name="not_ranked">NOT ranked</string>
    <string name="g_o_a_t">G.O.A.T</string>
    <string name="starboy12">starboy12</string>
    <string name="music">music</string>
    <string name="playlist">Playlist</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="your_playlist_is_empty_nadd_albums_from_album_details">Your playlist is empty\nAdd albums from album details</string>
    <string name="popular_music">POPULAR MUSIC</string>
    <string name="graham">Graham</string>
    <string name="pro">PRO</string>
    <string name="recent_activity">RECENT ACTIVITY</string>
    <string name="more_activity">MORE ACTIVITY</string>
    <string name="_238_97_this_year">238 / 97 this year</string>
    <string name="_110_110_this_year">110 / 110 this year</string>
    <string name="_84">84</string>
    <string name="_2">2</string>
    <string name="_324">324</string>
    <string name="_520">520</string>
    <string name="user_example_com">user@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_12">12</string>
    <string name="_8">8</string>
    <string name="_45">45</string>
    <string name="listened">Listened</string>
    <string name="rated_blinding_lights_5_stars">Rated \'Blinding Lights\' 5 stars</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="added_flowers_to_favorites">Added \'Flowers\' to favorites</string>
    <string name="_1_week_ago">1 week ago</string>
    <string name="i_listened">I Listened...</string>
    <string name="album_title">Album Title</string>
    <string name="saturday_15_november_2025">Saturday, 15 November 2025</string>
    <string name="rate">Rate</string>
    <string name="add_review">Add review...</string>
    <string name="first_listen">First Listen</string>
    <string name="anyone_can_reply">Anyone can reply</string>
    <string name="review">Review</string>
    <string name="materialists">Materialists</string>
    <string name="_2025">2025</string>
    <string name="listened_12_nov_2025">Listened 12 Nov 2025</string>
    <string name="pedro_got_a_lot_of_anxiety_in_this_one">Pedro got a lot of anxiety in this one</string>
    <string name="_3_likes">3 likes</string>
    <string name="reply">Reply</string>
    <string name="album">Album</string>
    <string name="jackboys_2">JACKBOYS 2</string>
    <string name="he_s_done_it_againnn">he\'s done it againnn</string>
    <string name="search_for_albums_artists_or_songs">Search for albums, artists, or songs</string>
    <string name="no_results_found">No results found</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_with_fingerprint">Sign in with Fingerprint</string>
    <string name="sign_up">Sign Up</string>
    <string name="iamnotbhoo_albums">iamnotbhoo Albums</string>
    <string name="my_lists">My Lists</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="create_your_first_list_to_organize_your_favorite_albums">Create your first list to organize your favorite albums</string>
    <string name="trackd">TRACKD</string>
    <string name="join_trackd">Join Trackd</string>
    <string name="artist_name">Artist Name</string>
    <string name="_18">18</string>
    <string name="a_night_at_the_opera">A Night At The Opera</string>
    <string name="_1975">1975</string>
    <string name="review_content_goes_here">Review content goes here...</string>
    <string name="creator">creator</string>
    <string name="song_title">Song Title</string>
    <string name="_0_reviews">0 reviews</string>
    <string name="album_description_or_overview">Album description or overview</string>
    <string name="_2024">2024</string>
    <string name="list_description">List description</string>
    <string name="filter">FILTER</string>
    <string name="music_results">Music results</string>
    <string name="no_results_found_please_try_again">No results found, please try again.</string>
    <string name="musicreviewapp_lets_you">MUSICREVIEWAPP LETS YOU...</string>
    <string name="description_will_appear_here">Description will appear here</string>
    <string name="featured_artists">FEATURED ARTISTS</string>
    <string name="the_artists_for_this_song_remain_a_mystery">The artists for this song remain a mystery...</string>
    <string name="just_now">Just now</string>
    <string name="music_title">Music Title</string>
    <string name="extended_review_content_goes_here">Extended review content goes here...</string>
    <string name="user">user</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="write_the_first_review">Write the first review!</string>
    <string name="submit_review">Submit Review</string>
    <string name="_2023">2023</string>
    <string name="album_name">Album Name</string>
    <string name="song_description_goes_here">Song description goes here...</string>
    <string name="user_bio_will_appear_here">User bio will appear here</string>
    <string name="highlights">HIGHLIGHTS</string>
    <string name="see_all">SEE ALL</string>
    <string name="no_music_available">No music available</string>
    <string name="this_user_hasn_t_reviewed_any_music_yet">This user hasn\'t reviewed any music yet.</string>
    <string name="recent_stories">RECENT STORIES</string>
    <string name="all_stories">ALL STORIES</string>
    <string name="demo">DEMO</string>
    <string name="google">Google</string>
    <string name="story_title">Story Title</string>
    <string name="story_description_goes_here">Story description goes here...</string>
    <string name="read_story">READ STORY</string>
    <string name="activity">activity</string>
    <string name="listen">Listen</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="review_log">Review / Log</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="language_changed">Language changed to %s. Please restart the app for changes to take effect.</string>
    <string name="english">English</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="from_friends">From friends</string>
    <string name="trending_now">Trending now</string>
    <string name="sign_in_with_google">Google Sign In</string>
    <string name="default_web_client_id">502839598328-lt7od3ekspqg5jdcvt9rpa08825llimp.apps.googleusercontent.com</string>
</resources>